.jjconflict-side-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__attribute_nix.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"./one.nix\", \"oneNix\")\npub fn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
---
let
  one = (builtins.import ./one.nix).oneNix;
  
  main = { }: one 1;
in
{ inherit one main; }
